# WhatsApp

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  git discard.bat.lnk  pyproject.toml
.claude/: settings.local.json
directives/: README.md
execution/: __init__.py  logger.py  main.py  uzapi.py
execution/comum/: agente.py  agente_comum.py  arquivo_tool.py  base_vetorial.py  base_vetorial.sql  const.py  rag.py  uzapi.py
execution/controller/: agent.py  agente.py  agente_prompt.txt  agente_tool_rag.py  arquivo.py  arquivo_service.py  arquivo_view.py  base_vetorial.py  base_vetorial.sql  classes.py  conhecimento_service.py  conhecimento_view.py  const.py  controller.py  home.py  home_service.py  interacao_service.py  log_agno.py  log_service.py  log_view.py  logs.py  supabase_service.py  uzapi.py  version.py
execution/controllers/: controller.py  dao.py  main_controller.py
execution/dao/: conexao.py  conhecimento_dao.py  dao_conhecimento.py  dao_interacao.py  dao_supabase.py  interacao_dao.py
execution/models/: conhecimento.py  interacao.py  webhook.py
execution/rules/: agente.py  agente_tool_rag.py  arquivo_tool.py  base_vetorial.py  logs.py
execution/rules/agente/: agente.py  agente_comum.py  agente_impl.py  agente_prompt.txt  agente_prompts.py  tool_base_conhecimento.py  toolkit_agno.py  (+1 more)
execution/services/: arquivo_service.py  conhecimento_service.py  home_service.py  interacao_service.py  log_service.py
execution/views/: arquivo_view.py  conhecimento_view.py  home_view.py  index.html  log_view.py  logs.html  visualizador-arquivos.html
(+1 files in other folders)
