[project]
name = "whatsapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.10",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=2.29.0",
    "pydantic>=2.0",
    "pymongo>=4.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.30.1",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "supabase>=2.0.0",
]
